--- a/src/content/posts/articles/economy-dnd-model-2.mdx
+++ b/src/content/posts/articles/economy-dnd-model-2.mdx
@@ -15,6 +15,8 @@ tags:
 
 Если вы хотите тоже помочь нам в это непростое время, то про способы помощи можно прочесть [здесь.](https://cyborgsandmages.com/about-cyborgs-and-mages/help-and-support/support-us/)
 
+---
+
 [В первой части](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1) мы осмотрели основные официальные подходы к стоимости волшебных предметов в пятой редакции и самое время подытожить.
 
 ## Основное в правилах пятой редакции про стоимость и создание волшебных предметов
@@ -34,25 +36,36 @@ tags:
 
 Любой волшебный предмет описывается его свойствами – тем, что он делает. С той или иной точностью эти свойства могут быть описаны через различные заклинания, эффекты которых эмулирует волшебный предмет. Следовательно – в основе всей системы оценки стоимости волшебных предметов должна лежать стоимость сотворения заклинания.
 
-Стоимость сотворения заклинания персонажем на заказ прямо коррелирует с стоимостью создания свитков заклинаний, но также зависит от требований компонентов и возможности ритуального сотворения. Очевидно, что заклинания, которые можно сотворить ритуально – будут стоить дешевле.
+Стоимость сотворения заклинания персонажем на заказ прямо коррелирует с стоимостью создания свитков заклинаний, но также зависит от требуемых компонентов и характера их использования (расходуемые/не расходуемые) и возможности ритуального сотворения. Очевидно, что заклинания, которые можно сотворить ритуально – будут стоить дешевле.
 
 Поскольку мы предполагаем, что в сеттинге заклинателей более высокого уровня меньше нежели начинающих заклинателей, то это также должно накладывать отпечаток на стоимость заклинаний более высокого уровня – просто в виду их меньшей доступности.
 
 ### Определение базовых величин в системе
 
-Базовой единицей для определения стоимости заклинания первого круга вполне может служить зелье лечения (50 зм), которое фактически создает эффект заклинания Лечения Ран, сотворенного первым кругом - 2к4+2 хитов против 1к8+модификатор характеристики заклинателя, который можно принять на базовом уровне равным 2, т.е. в среднем 7 хитов против 6,5 хитов. При этом зелье лечения обладает рядом дополнительных преимуществ: нет необходимости быть заклинателем, может быть использовано на бессознательном персонаже, не требует вербальных или соматических компонентов. Следовательно, стоимость сотворения Лечения Ран первым кругом меньше 50 золотых монет. Насколько меньше? Учитывая, что свиток заклинания будет стоить все еще меньше зелья лечения и дороже собственно услуг заклинателя, я бы предположил базовую стоимость сотворения заклинания первого круга в размере 20 зм, а стоимость свитка с заклинанием первого круга – в размере 30 зм.
+Базовой единицей для определения стоимости заклинания первого круга вполне может служить **зелье лечения** (50 зм, необычное зелье), которое фактически создает эффект заклинания *Лечения Ран*, сотворенного первым кругом - 2к4+2 хитов против 1к8+модификатор заклинательной характеристики заклинателя (этот модификатор можно принять в первом приближении  равным 2), т.е. в среднем зелье восстанавливает 7 хитов против 6,5 хитов у заклинания. 
+
+При этом зелье лечения обладает рядом дополнительных преимуществ: 
+- нет необходимости быть заклинателем, 
+- может быть использовано на бессознательном персонаже, 
+- не требует вербальных или соматических компонентов.
+
+Следовательно, стоимость сотворения *Лечения Ран* первым кругом меньше 50 золотых монет. Насколько меньше? Учитывая, что свиток заклинания будет стоить все еще меньше зелья лечения и дороже собственно услуг заклинателя, я бы предположил базовую стоимость сотворения заклинания первого круга в размере 20 зм, а стоимость свитка с заклинанием первого круга – в размере 30 зм.
+
+**Базовая стоимость сотворения заклинания 1-ого круга = 20 зм.**
+
+**Стоимость свитка заклинаний 1-ого круга = 30 зм.**
 
 Стоимость ритуального сотворения заклинаний может колебаться от дополнительного наличия ритуальных заклинателей, но базово я бы уменьшил стоимость ритуального сотворения до 10 или даже 5 зм.
 
-**Сотворение заклинаний первого круга – 20 зм, ритуальное сотворение заклинаний – 50% стоимости – 10 зм.**
+**Снижение стоимость для ритуальных заклинаний = 50%.**
 
-**Стоимость свитка заклинания первого круга – 30 зм**
+**Базовая стоимость сотворения ритуального заклинания 1-ого круга = 10 зм.**
 
-### Различная ценность волшебных предметов для авантюристов и широкого рынка
+## Различная ценность волшебных предметов для авантюристов и широкого рынка
 
 Не стоит забывать, что ценность и востребованность волшебных предметов для авантюристов и обычных персонажей – зажиточных горожан, купцов, дворян, даже рыцарей и королей – будет разной. И хотя предлагаемый способ оценки на основе сравнимых заклинаний будет работать одинаково, следует учитывать возможность наличия корректирующего коэффициента для некоторых предметов.
 
-### Зависимость стоимости заклинания от круга заклинаний
+## Зависимость стоимости заклинания от круга заклинаний
 
 Учитывая этапы игры и сложность получения уровней персонажей можно смело говорить о геометрической прогрессии количества заклинателей с доступом к более высокому кругу (с дробным множителем) или даже степенной прогрессии.
 
@@ -80,7 +93,7 @@ tags:
 - если заклинание требует наличия определенного материального компонента, то в стоимость сотворения заклинания необходимо добавить 20% стоимости этого компонента;
 - заклинания с временем сотворения более 1 часа также будут стоить дороже, при чем стоимость будет также учитывать и уровень заклинателя.
 
-В общем виде, на стоимость сотворения заклинания будет также влиять распространенность заклинателей определенного вида – клериков, волшебников и т.п. Например, в случае если волшебников или друидов в разы меньше клериков, то сотворение заклинаний из их (волшебников или друидов) списка заклинаний, недоступных клерикам, будет стоить в разы дороже. Например, если друидов в пять раз меньше клериков, то сотворение Роста растений будет стоить не 540 зм, а минимум 2700 зм, а возможно и больше.
+В общем виде, на стоимость сотворения заклинания будет также влиять распространенность заклинателей определенного вида – клериков, волшебников и т.п. Например, в случае если волшебников или друидов в разы меньше клериков, то сотворение заклинаний из их (волшебников или друидов) списка заклинаний, недоступных клерикам, будет стоить в разы дороже. Например, если друидов в пять раз меньше клериков, то сотворение *Роста растений* будет стоить не 540 зм, а минимум 2700 зм, а возможно и больше.
 
 В общем виде я бы добавлял к стоимости сотворения заклинания дополнительный множитель, если оно не доступно всем классам.
 
@@ -88,25 +101,50 @@ tags:
 
 Очевидно, что наиболее высокоуровневых заклинателей будет проще найти в больших городах. В качестве базовой рекомендации, я бы предположил, что в деревнях с населением менее 400 человек заклинателей может и вовсе не быть, с населением 400-1000 можно найти заклинателей с доступом к 1—3 кругам заклинаний, 1000-10000 – с доступом к 1-5 кругам заклинаний, 10000-25000 – с доступом к 1-7 кругам заклинаний, 25000 и более – с доступом к 1-9 кругам заклинаний, но не стоит забывать, что это является лишь общей рекомендацией, а не строгой закономерностью.
 
+| Население   | Наличие заклинателей |
+|-------------|----------------------|
+| до 400      | Может не быть        |
+| до 1000     | 1-3 круг заклинаний  |
+| до 10000    | 1-5 круг заклинаний  |
+| до 25000    | 1-7 круг заклинаний  |
+| свыше 25000 | 1-9 круг заклинаний  |
+
 ### Определение стоимости зачарований на волшебных предметах
 
-Одним из наиболее простых предметов для оценки стоимости является меч +1. Лежащие на таком клинке чары эквиваленты заклинанию Волшебное оружие с постоянным эффектом.
+Одним из наиболее простых предметов для оценки стоимости является **меч +1**. Лежащие на таком клинке чары эквиваленты заклинанию *Волшебное оружие* с постоянным эффектом.
 
-**Базовая стоимость заклинания Волшебное оружие: 160 зм.**
+**Используемое заклинание:** *Волшебное оружие*
 
-**Длительность: перманентно.**
+**Круг заклинания:** 2-ой
 
-Исходя из примеров перманентных заклинаний – Стражи, Круг телепортации, которые необходимо сотворять в течении 30 дней, можно предположить что для перманентных заклинаний ориентировочным множителем может быть 30, но учитывая также специфичность этих заклинаний и тем, что в базе многие предметы обладают 7 зарядами, я бы определил стоимость постоянного зачарования в десятикратном или пятнадцатикратном размере.
+**Базовая стоимость заклинания Волшебное оружия =** 20\*2^3=20\*8=160 зм.
 
-**Базовый множитель постоянного эффекта для заклинания с кратким временем действия: x 10**
+**Длительность:** перманентно.
 
-Таким образом, оценочная стоимость +1 клинка составит 1600 + стоимость клинка зм.
+Исходя из примеров перманентных заклинаний – *Стражи и Обереги*, *Круг телепортации*, которые необходимо сотворять в течении 30 дней, можно предположить что для перманентных заклинаний ориентировочным множителем может быть 30, но учитывая также специфичность этих заклинаний и тем, что в базе многие предметы обладают 7 зарядами, я бы определил стоимость постоянного зачарования в десятикратном или пятнадцатикратном размере.
 
-Для меча +2 требуются чары более высокого круга – уже четвертого. Следовательно, оценочная стоимость меча +2 будет составлять 12800 зм + стоимость самого клинка, а меча +3 – 43200 зм.
+**Базовый множитель постоянного эффекта для заклинания с кратким временем действия:** x 10
+
+Таким образом, оценочная стоимость **меча +1** составит 160\*10=1600 + стоимость клинка зм.
+
+Для **меча +2** требуются чары более высокого круга – уже 4-ого. Следовательно, оценочная стоимость **меча +2** будет составлять 20\*4^3\*10= 1280\*10=12800 зм + стоимость самого клинка, а **меча +3 **– 20\*6^3\*10= 4320\*10=43200 зм + стоимость самого клинка.
+
+| Бонус зачарования оружия | Базовая стоимость, зм |
+|--------------------------|-----------------------|
+| 1                        | 1600                  |
+| 2                        | 12800                 |
+| 3                        | 43200                 |
 
 ### Переопределение базового подхода пятой редакции к стоимости от редкости
 
 Полученные значения также позволяют немного переопределить стоимость волшебных предметов от редкости – так для необычных предметов это может быть от 1000 до 5000 зм, для редких – от 5000 до 25000 зм, для очень редких – от 25000 до 75000 зм, а для легендарных от 75000 и до 250000 зм.
+
+| Редкость     | Диапазон стоимости    |
+|--------------|-----------------------|
+| Необычный    | от 1000 до 5000 зм    |
+| Редкий       | от 5000 до 25000 зм   |
+| Очень редкий | от 25000 до 75000 зм  |
+| Легендарный  | от 75000 до 250000 зм |
 
 [Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-3)
 
