--- a/src/content/posts/articles/economy-dnd-model-3.mdx
+++ b/src/content/posts/articles/economy-dnd-model-3.mdx
@@ -9,7 +9,7 @@ tags:
   - Ценообразование
 ---
 
-Это третья часть из цикла авторских материалов про экономическую модель пятой редакции и попытке решения её проблем.
+Это третья часть из цикла авторских материалов про экономическую модель пятой редакции и и попытки меня и других авторов решения её проблем.
 
 [Часть 1, в которой приводился анализ базовых правил пятой редакции](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1)
 
@@ -19,7 +19,7 @@ tags:
 
 ## Недостатки оценки стоимости предметов на основе стоимости заклинаний
 
-Во второй части я показал подход к оценке стоимости волшебных предметов на основе стоимости эффектов заклинаний. Очевидно, что этот подход обладает существенным недостатком: он плохо применим для предметов, эффекты которых не основаны на заклинаниях – например, кольцо хранения заклинаний.
+Во второй части я показал подход к оценке стоимости волшебных предметов на основе стоимости эффектов заклинаний. Очевидно, что этот подход обладает существенным недостатком: он плохо применим для предметов, эффекты которых не основаны на заклинаниях – например, **кольцо хранения заклинаний**.
 
 ### ОЦЕНКА КОЛЬЦА ХРАНЕНИЯ ЗАКЛИНАНИЙ
 
@@ -28,24 +28,32 @@ tags:
 - для заклинателей – это также возможность сотворять заклинания других классов – например, призыв фамильяра или призыв скакуна;
 - для незаклинателей – уникальная возможность стать заклинателем.
 
-Базовая стоимость кольца хранения заклинаний явно основана на стоимости заклинания пятого круга – 2500 зм. Далее необходимо учесть:
--- необходимость настройки, которая уменьшает стоимость предмета;
+Базовая стоимость кольца хранения заклинаний явно должна быть основана на стоимости заклинания пятого круга – 2500 зм, поскольку кольцо обеспечивает возможность сохранения заклинаний, чей суммарный круг должен не превышать пять.
+
+Далее необходимо учесть:
+- необходимость настройки, которая уменьшает стоимость предмета;
 - возможность использования каждый день;
 - возможность сотворять заклинания других классов;
 
-**Возможность использования кольца хранения заклинаний каждый день** фактически эквивалентно перманентному добавлению одной ячейки пятого круга. По аналогии со стоимостью перманентных эффектов заклинаний, это даст множитель х10.
+**Возможность использования кольца хранения заклинаний каждый день:** фактически эквивалентно перманентному добавлению одной ячейки пятого круга. По аналогии со стоимостью перманентных эффектов заклинаний, это даст множитель **х10**.
 
-**Необходимость настройки:** в данном случае примем 50%, но далее влияние необходимости настройки на цену рассмотрено подробнее.
+**Необходимость настройки:** в данном случае примем **50%**, но далее влияние необходимости настройки на цену рассмотрено подробнее.
 
-**Возможность сотворять заклинания других классов** – это существенное расширение возможностей класса, соответственно множитель х1,5 или х2 не выглядит слишком большим. Принимаем в данном случае равным 2.
+**Возможность сотворять заклинания других классов** – это существенное расширение возможностей класса, соответственно множитель х1,5 или х2 не выглядит слишком большим. Принимаем в данном случае равным **х2**.
 
-Следовательно, стоимость кольца хранения заклинаний будет составлять 2500*10*0,5*2=25000 зм.
+Следовательно, стоимость **кольца хранения заклинаний** будет составлять 2500\*10\*0,5\*2=25000 зм.
 
-### ВЛИЯНИЕ КОНЦЕНТРАЦИИ И ДЛИТЕЛЬНОСТИ ДЕЙСТВИЯ БАЗОВОГО ЗАКЛИНАНИЯ НА СТОИМОСТЬ ПРЕДМЕТА
+## Влияние длительности базового заклинания на стоимость 
 
-Во второй части я предположил использовать стоимость сотворения заклинания в качестве базового подхода к оценке свойств предмета забыв про то, что многие заклинания требуют концентрации, а многие заклинания имеют ограниченное время действия.
+Во второй части я предположил использовать стоимость сотворения заклинания в качестве базового подхода к оценке свойств предмета забыв про то, что многие заклинания требуют концентрации, а также многие заклинания имеют ограниченное время действия.
 
-Так, например, эффект постоянной защиты от добра и зла – оценивался бы лишь по базовой стоимости – что дало бы стоимость в 200 зм. Но поскольку длительность защиты от добра и зла – Концентрация, до 10 минут, что в шесть раз меньше длительности Волшебного оружия, а перманентный эффект действует постоянно, то следует также добавить коэффициент времени действия, задав его для заклинаний с длительностью около 10 минут как x6, а заклинаний с длительностью 1 минута – как x50 для перманентных эффектов.
+Так, например, эффект постоянной *защиты от добра и зла* – оценивался бы лишь по базовой стоимости – что дало бы стоимость в 200 зм. Но поскольку длительность *защиты от добра и зла* – Концентрация, до 10 минут, что в шесть раз меньше длительности *Волшебного оружия*, а перманентный эффект действует постоянно, то следует также добавить коэффициент времени действия, задав его для заклинаний с длительностью около 10 минут как **x6** (60 минут Волшебного оружия / 10 минут ), а заклинаний с длительностью 1 минута – соответственно **x50** (60 минут / 1 минута) для перманентных эффектов.
+
+**Длительность заклинания около 60 минут: x1**
+
+**Длительность заклинания около 10 минут: x6**
+
+**Длительность заклинания 1 минута: x50**
 
 Опять же – эти коэффициенты являются ориентировочными и пока не строгими.
 
@@ -61,7 +69,7 @@ tags:
 - легендарные;
 - артефакты.
   
-Сразу отметим, что в этой классификации редкости волшебных предметов пропущен следующий вид волшебных предметов: «уникальные»
+Сразу отметим, что эта классификация редкости волшебных предметов не выделяет отдельно такие предметы как «уникальные»
 
 По виду:
 - чудесные предметы;
@@ -90,13 +98,13 @@ tags:
 - требующие настройки;
 - не требующие настройки.
   
-Что касается требований настройки, то я считаю, что подход, который лежал в плейтестовых правилах, когда волшебный предмет давал некоторые преимущества и без настройки (например, ворпальный меч или святой мститель можно было использовать как +3 меч без настройки) более интересным и с точки зрения игрока, и с точки зрения мастера.
+Что касается требований настройки, то я считаю, что подход, который лежал в плейтестовых правилах, когда волшебный предмет давал некоторые преимущества и без настройки (например, **вострый меч** или **святой мститель** можно было использовать как **меч +3** без настройки) более интересным и с точки зрения игрока, и с точки зрения мастера.
 
 По наличию дополнительных требований к использованию:
 - имеющие дополнительные требования (класс, раса, и т.п.);
 - не имеющие.
 
-В руководстве Занатара по всему появилась дополнительная классификация предметов – малые (minor) и значительные (major).
+В руководстве Занатара по всему появилась дополнительная классификация предметов – *малые (minor)* и *значительные (major)*.
 
 ## Дополнительные факторы, влияющие на стоимость
 
@@ -104,15 +112,20 @@ tags:
 
 Предметы, обладающие зарядами и перезаряжающиеся за определенный промежуток времени оцениваются как с учетом максимального количества зарядов, так и с учетом перезарядки.
 
-Для предметов, воссоздающих эффекты заклинаний в прямом виде (например жезл огненных шаров или  палочка магических стрел) базовая стоимость определяется по базовому варианту использования – без учета повышенного расхода зарядов, т.е. базовая стоимость палочки волшебных стрел будет рассчитываться исходя из семикратного использования заклинания первого круга – т.е. 140 зм x 10 = 1400 зм. А возможность использовать несколько зарядов одновременно – это множитель к стоимости. Скажем, x2. Следовательно, уточненная стоимость палочки волшебных зарядов – 2800. Влияние же перезарядки для волшебной палочки магических стрел с максимальным количеством зарядов 7 и перезарядкой 1к6+1 зарядов в день уменьшает стоимость –на скорость перезарядки, т.е. среднее от 1к6+1 = 4,5 заряда в день, следовательно множитель перезарядки будет составлять: 65%. Итоговая стоимость волшебной палочки магических стрел: 1820 зм.
+Для предметов, воссоздающих эффекты заклинаний в прямом виде (например **жезл огненных шаров** или  **палочка магических стрел**) базовая стоимость определяется по базовому варианту использования – без учета повышенного расхода зарядов, т.е. базовая стоимость **палочки магических стрел** будет рассчитываться исходя из семикратного использования заклинания первого круга – т.е. **20 x 7 x 10 = 1400** зм. А возможность использовать несколько зарядов одновременно – это множитель к стоимости. Скажем, **x2**. Следовательно, уточненная стоимость палочки магических стрел – **2800**. Влияние же перезарядки для волшебной палочки магических стрел с максимальным количеством зарядов 7 и перезарядкой 1к6+1 зарядов в день уменьшает стоимость – на скорость перезарядки, т.е. среднее от 1к6+1 = 4,5 заряда в день, следовательно множитель перезарядки будет составлять: **65%**. 
 
-### ВЛИЯНИЕ НАСТРОЙКИ НА СТОИМОСТЬ ПРЕДМЕТА
+Итоговая стоимость волшебной палочки магических стрел: **20 x 7 x 10 x 2 x 0,65 = 1820 зм**.
+
+## ВЛИЯНИЕ НАСТРОЙКИ НА СТОИМОСТЬ ПРЕДМЕТА
 
 Оценить отдельно влияние требования настройки на предмет на стоимость волшебного предмета достаточно сложно. Множитель 0,5 может быть чересчур заниженным, а 0,9 – завышенным, поэтому базово я скорее всего буду использовать множитель 0,75 но буду помнить о том, что эта величина не является фиксированной.
 
+**Требование настройки для получения преимуществ от предмета: x0,75**
+
 Требование же настройки определенным классом и расой – это также дополнительный модификатор стоимости от 0,25 до 1.
 
-### ДОПОЛНИТЕЛЬНЫЕ ФАКТОРЫ ИЗМЕНЯЮЩИЕ СТОИМОСТЬ
+
+## Незначительняые особенности предмета и их влияние на стоимость предмета
 
 Дополнительные свойства волшебных предметов – создатель, история создания и т.п. также могут оказывать эффект на стоимость предмета. В качестве базового подхода я бы принял наличие положительных свойств как увеличение стоимости предмета на 10%.
 
@@ -124,7 +137,13 @@ tags:
 
 ### ЦЕННОСТЬ И МОЩНОСТЬ ПОСТОЯННЫХ ВОЛШЕБНЫХ ПРЕДМЕТОВ
 
-Для ранжирования ценности (мощности) постоянных волшебных предметов стоит применять следующий подход. В общем, связь мощности с редкостью – для нас является понятной и очевидной на базовом понятийном уровне, следовательно для каждой градации редкости мы можем определить базовый уровень ценности и мощности. Далее, в зависимости от стоимости предмета на основе эффектов предмета, можно разделить предметы на дополнительные подгруппы, но возникает вопрос по соотношению мощности подгрупп различных редкостей. Отсюда следует вывод, что все-таки типология предметов по ценности и мощности не может быть напрямую основана на редкости и должна быть независимой, тем не менее усредненные базовые ценности для каждой редкости вполне могут быть одним из классов предметов по мощности.
+Для ранжирования ценности (мощности) постоянных волшебных предметов стоит применять следующий подход. 
+
+В общем, связь мощности с редкостью – для нас является понятной и очевидной на базовом понятийном уровне, следовательно для каждой градации редкости мы можем определить базовый уровень ценности и мощности. 
+
+Далее, в зависимости от стоимости предмета на основе эффектов предмета, можно разделить предметы на дополнительные подгруппы, но возникает вопрос по соотношению мощности подгрупп различных редкостей. 
+
+Отсюда следует вывод, что все-таки типология предметов по ценности и мощности не может быть напрямую основана на редкости и должна быть независимой, тем не менее усредненные базовые ценности для каждой редкости вполне могут быть одним из классов предметов по мощности.
 
 С учетом нашего подхода к этапам игры, также можно выстроить приблизительную взаимосвязь базовой редкости и этапа игры
 
@@ -137,7 +156,7 @@ tags:
 | Очень редкий      | 13-16 уровни | G        |
 | Легендарный       | 17-20 уровни | I        |
 
-Расширив таблицу до 9 значений – приблизительно граничному значению классов в применяемой классифиакции, получим следующую картину.
+Расширив таблицу до 10 значений – приблизительно граничному значению классов в применяемой классифиакции, получим следующую картину.
 
 | Редкость предмета | Этап         | Ценность |
 |-------------------|--------------|----------|
@@ -152,7 +171,9 @@ tags:
 | Легендарный       | 17-20 уровни | I        |
 |                   |              | J        |
 
-Примечание: при этом следует помнить, что соотношение между редкостью и ценностью носит условный характер и выполняется только для определенных предметов, которые являются характерными и типовыми для заданной редкости/ценности. Многие предметы по своей ценности могут иметь группу, которая соответствует намного более низкой редкости, нежели указанная для предмета, равно как и наоборот.
+Примечание: при этом следует помнить, что соотношение между редкостью и ценностью носит условный характер и выполняется только для определенных предметов, которые являются характерными и типовыми для заданной редкости/ценности - например, оружие с бонусом зачарования к попаданию и урону от +1 до +3 или доспех с бонусом зачарования к КЗ от +1 до +3.
+
+Многие предметы по своей ценности могут иметь группу, которая соответствует намного более низкой редкости, нежели указанная для предмета, равно как и наоборот.
 
 ## РАСХОДУЕМЫЕ ПРЕДМЕТЫ И ЦЕННОСТЬ
 
@@ -164,7 +185,7 @@ tags:
 
 Если с эффектом зачарования волшебного оружия было легко определиться использовав в качестве базы заклинание второго круга, то с предметами, которые дают бонус к Классу Защиты сложнее.
 
-Если использовать заклинание Щит Веры для оценки стоимости эффекта, то получим для эффекта +2:
+Если использовать заклинание *Щит Веры* для оценки стоимости эффекта, то получим для эффекта +2 к Кз:
 
 Заклинание 1-го круга, Концентрация, длительность 1 минута.
 
@@ -174,20 +195,40 @@ tags:
 
 **Перманентный эффект:** 20\*60\*10=12000 зм
 
-Итоговая стоимость эффекта +2 КЗ – 12000 зм.
+**Итоговая стоимость эффекта:** +2 КЗ – 12000 зм.
 
-Стоимость эффекта +1 – 3000 зм (оценивая зависимость ценности от бонуса как квадратичную) и стоимость эффекта +3 – 3000\*3^2=27000 зм.
-Для щитов, в виду их ограниченности стоимость эффекта уменьшается в 2 раза.
+Возникает вопрос как определить стоимость эффекта +1 КЗ? Полагая что ценность зависит от бонуса КЗ квадратично, получим: +2  2^2\*x = 12000 -> x = 12000/4=3000 зм.
+
+**Итоговая стоимость эффекта:** +1 КЗ – 3000 зм.
+
+А стоимость эффекта +3 КЗ будет составлять:
+
+3^2\*3000=9*3000=27000 зм.
+
+**Итоговая стоимость эффекта:** +3 КЗ – 27000 зм.
+
+Для щитов, в виду их ограниченности, стоимость эффекта уменьшается в 2 раза.
 
 ### БОНУС К СПАСБРОСКАМ
 
-Базовым заклинанием в данном случае будет заклинание Благословение.
+Базовым заклинанием в данном случае будет заклинание *Благословение*.
 
 Заклинание 1-го круга, Концентрация, длительность 1 минута.
 
-Вычисления аналогичны вычислениям для Класса Защиты, но поскольку эффект оказывается на несколько характеристик, то добавляем множитель х2.
+Вычисления аналогичны вычислениям для Класса Защиты, но поскольку эффект оказывается на несколько характеристик, то добавляем множитель **х2**.
 
-Итоговая стоимость эффекта +2,5–24000, стоимость эффекта +1 следовательно 3840 зм, +2 – 15360 зм, +3 – 34560.
+Поскольку бонус к спасброскам и броскам атаки  имеет случайный характер, то используем в расчетах среднее значение этого бонуса - 2,5.
+
+Итоговая стоимость эффекта +2,5 к спасброскам и броскам атаки – 20\*60\*10\*2=24000, стоимость эффекта +1 следовательно 3840 зм, +2 – 15360 зм, +3 – 34560.
+
+Из этой суммы надо вычесть стоимость бонуса к броскам атаки, который мы можем определить как 60% стоимости соответствующего оружия.
+
+| Бонус | Стоимость бонуса к спасброскам и броскам попадания | Стоимость бонуса к броскам попадания | Стоимость бонуса к спасброскам |
+|-------|----------------------------------------------------|--------------------------------------|--------------------------------|
+| 1     | 3840                                               | 960                                  | 2880                           |
+| 2     | 15360                                              | 3840                                 | 11520                          |
+| 3     | 34560                                              | 8640                                 | 25920                          |
+
 
 ### Кольцо и плащ защиты
 
@@ -199,27 +240,38 @@ tags:
 
 **Базовая стоимость:** 6840\*0,75=5130 зм
 
+| Бонус | Стоимость бонуса к спасброскам | Стоимость бонуса КЗ | Итоговая стоимость |
+|-------|--------------------------------|---------------------|--------------------|
+| 1     | 2880                           | 3000                | 5880               |
+| 2     | 11520                          | 12000               | 23520              |
+| 3     | 25920                          | 27000               | 52920              |
+
 ### ЗЕЛЬЯ ЛЕЧЕНИЯ РАЗЛИЧНОЙ РЕДКОСТИ
 
-Стоимость зелья лечения составляет 50 зм. При этом зелье восстанавливает 2к4+2=7 хитов в среднем, т.е. стоимость 1 хита лечения составляет 7,14 зм. 
+Стоимость **зелья лечения** составляет 50 зм. При этом зелье восстанавливает 2к4+2=7 хитов в среднем, т.е. стоимость 1 хита лечения составляет 7,14 зм. 
 
 Используя эту же метрику оценим стоимость более редких зелий лечения.
 
 Также, с учетом того, что зелья лечения предполагается использовать в бою и важна экономика действий а также носимый груз – более компактные средства лечения будут стоить дороже по отношению к 1 хиту. Для большого зелья лечения поставим коэфициент х2, для превосходного х3 и для наилучшего х4
 
-| Зелье лечения              | Восстанавливаемые хиты | Стоимость оценочная, зм | Стоимость оценочная итоговая, зм |
-|----------------------------|------------------------|-------------------------|----------------------------------|
-| Большое зелье лечения      | 4к4+4 (14)             | 100                     | 200                              |
-| Превосходное зелье лечения | 8к4+8 (28)             | 200                     | 600                              |
-| Наилучшее зелье лечения    | 10к4+20 (45)           | 321,3 зм                | 1282,4                           |
+| Зелье лечения              | Восстанавливаемые хиты | Множитель | Стоимость оценочная, зм |
+|----------------------------|------------------------|-----------|-------------------------|
+| Зелье лечения              | 2к4+2(7)               | 1         | 50                      |
+| Большое зелье лечения      | 4к4+4 (14)             | 2         | 200                     |
+| Превосходное зелье лечения | 8к4+8 (28)             | 3         | 600                     |
+| Наилучшее зелье лечения    | 10к4+20 (45)           | 4         | 1286                    |  |
 
 ### БОНУСНЫЙ УРОН
 
 Для определения базового заклинания для бонусного урона у нас также есть несколько вариантов:
-- Божественная милость с 1к4 урона на 1 минуту
-- Метка охотника с 1к6 урона
+- *Божественная милость* с 1к4 урона на 1 минуту
+- *Метка охотника* с 1к6 урона
 - 
-В качестве базового варианта стоит принять божественную милость, поскольку этот урон не фиксируется на одной цели и не имеет дополнительных свойств.
+В качестве базового варианта стоит принять *божественную милость*, поскольку этот урон не фиксируется на одной цели и не имеет дополнительных свойств.
+
+Стоимость эффекта 2,5 = 20\*10\*60 = 12000
+
+Считая зависимость квадратичной - стоимость эффекта +1 = 1920
 
 ### Пламенный язык
 
@@ -253,13 +305,16 @@ tags:
 
 ### Солнечный клинок
 
-**Дополнительный урон:** 1к8 лучистого урона против нежити
+**Дополнительный урон:** 1к8 лучистого урона против нежити (в среднем 4,5). В виду ограниченности целей можно считать эквивалентом перманентного заклинания первого круга = 12000 зм.
 
-Эквивалент оружия +2
+**Дополнительный бонус к попаладанию и урону:** аналог оружия +2 = 12800 зм
 
-Излучает солнечный свет – эквивалент постоянного заклинания 3 круга
+**Излучает *солнечный свет* **– эквивалент постоянного заклинания 3 круга - 20*3^3\*10=5400 зм
 
-Требует настройки
+**Требует настройки:** множитель 0,75
+
+**Итоговая стоимость:** (5480+12000+12000)*0,75=22110 зм
+
 
 ## Правила по созданию волшебных предметов
 
