--- a/src/content/posts/articles/economy-dnd-model-1.mdx
+++ b/src/content/posts/articles/economy-dnd-model-1.mdx
@@ -293,9 +293,9 @@ tags:
 [https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-7](https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-7)
 
 [https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-8](https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-8)
----
 
-Перечень статей "Экономическая модель D&D 5e"
+
+## Перечень статей "Экономическая модель D&D 5e"
 
 
 [Часть 1, в которой приводился анализ базовых правил пятой редакции](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1)
