--- a/src/content/posts/articles/economy-dnd-model-3.mdx
+++ b/src/content/posts/articles/economy-dnd-model-3.mdx
@@ -346,7 +346,7 @@ tags:
   
 Помимо этого, мы также имеем игромеханические характеристики предмета:
 - вид предмета;
---редкость;
+- редкость;
 - ценность*;
 - стоимость*.
   
