--- a/src/content/posts/core-d20/morale-c20.mdx
+++ b/src/content/posts/core-d20/morale-c20.mdx
@@ -54,7 +54,9 @@ tags:
 
 ## БОЕВОЙ ДУХ НИП
 Моральный рейтинг последователей, приспешников и наемников НИП, служащие персонажам игроков, имеют базовый показатель боевого духа «Средний» со значением 10. Он изменяется под воздействием нескольких факторов, включая мировоззрение НИП, отношение к своему хозяину, и так далее.
-Модификаторы оценки Боевого духа
+
+## Модификаторы оценки Боевого духа
+
 В следующих таблицах представлены модификаторы к базовому показателю Боевого духа, равному 10, для наемников, приспешников и последователей:
 Мировоззрение: Законные, а также добрыеНИП, как правило, более лояльны по отношению к своим работодателям или хозяевам. И наоборот, хаотичные и/или злые НИП, как правило, думают о достижении своих собственных целей и задач, часто за счет других, и становятся менее верными слугами.
 
@@ -91,6 +93,7 @@ tags:
 | Наемник       | ±0          |
 
 ## ПРОВЕРКИ БОЕВОГО ДУХА
+
 Иногда происходит слишком много всего, чтобы уследить за всеми мотивами и реакциями НИП или монстров. В это время используйте следующую систему для проверки боевого духа или лояльности сушества или НИП.
 
 Проверки боевого духа проводятся в обстоятельствах, когда проверяется верность или храбрость существа, наемника, приверженца или последователя. В следующей таблице приведены некоторые примеры обстоятельств, требующих проверки боевого духа, и возможные результаты неудачных проверок.
