--- a/src/content/posts/core-d20/morale-c20.mdx
+++ b/src/content/posts/core-d20/morale-c20.mdx
@@ -1,5 +1,5 @@
 ---
-title: [Core d20 RPG] Сражение. Боевой дух
+title: Core d20 RPG - Сражение. Боевой дух
 description: Дополнительные правила по боевому духу
 date: 2023-08-16
 tags:
