--- a/src/content/posts/articles/paladins-clerics-warlocks.mdx
+++ b/src/content/posts/articles/paladins-clerics-warlocks.mdx
@@ -41,17 +41,17 @@ tags:
 
 ## Клерик
 
-Клерик, в отличие от паладаина, получает свои силі не от клятві а от божества.
+Клерик, в отличие от паладаина, получает свои силы не от клятвы, а от божества.
 
 При этом стоит отметить, что также убрали привязку мировоззрения клерика к мировоззрению божества.
 
-Может ли потерять клерик свои силы, даровоаннные ему богом? Конечно, бог точно можно это сделать - прекратить даровать чудеса нехорошему персонажу, который тем или иным образом его обидел (скатился в ересь или сознательно решил отказаться от поклонения этому божеству).
+Может ли потерять клерик свои силы, даровоаннные ему богом? Конечно, бог точно может это сделать - прекратить даровать чудеса нехорошему персонажу, который тем или иным образом его обидел (скатился в ересь или сознательно решил отказаться от поклонения этому божеству).
 
 Ситуация, скажем прямо, не самая ординарная.
 
-И многое будет зависеть от нарративного описания этогй ситуации.
+И многое будет зависеть от нарративного описания этой ситуации.
 
-И опять придется решать Мастеру -в взаимодействии с игроком решать что происходит когда твой клерик начинает поклоняться другому богу - например, Афине а не Аресу.
+И опять придется решать Мастеру - во взаимодействии с игроком решать, что происходит когда твой клерик начинает поклоняться другому богу - например, Афине а не Аресу.
 
 И, поскольку, был взят курс на уменьшение редко используемых правил - то нет и необходимости их прописывать - все равно Мастеру и Игроку придется договариваться и это можно сделать и безо всяких правил.
 
@@ -64,7 +64,7 @@ tags:
 
 Но, в целом очевидно, что при нарушении этого самого Договора - дарованая сила покровителем исчезнет.
 
-Но часть своих сил колудн получает самостоятельно - изучая древние воззвания, и они не зависят от покровителя колдуна. Поэтому выбранные воззвания - все таки останутся, а вот покровителя придется искать другого и заключать с новым - новый договор. А это опять прямое взаимодействие мастера и игрока.
+Но часть своих сил колдун получает самостоятельно - изучая древние воззвания, и они не зависят от покровителя колдуна. Поэтому выбранные воззвания - все таки останутся, а вот покровителя придется искать другого и заключать с новым - новый договор. А это опять прямое взаимодействие мастера и игрока.
 
 
 ## Простой вывод
