--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -234,3 +234,19 @@ tags:
 Последствие подтасовок: Не все броски дайсов являются механикой
 
 Диапазон подготовки
+
+---
+
+Пока эти переводы не перенесены на этот сайт вы можете ознакомиться с многими из них на следующих сайтах:
+
+архиве статей со старого сайта - https://archivecyborgsandmages.wordpress.com/category/translations/translations-other/alexandrian/
+
+и других сайтах
+
+https://pnprpg.ru/blog/tag/the-alexandrian/
+
+https://longstoryshort.app/
+
+https://vk.com/dungeonsandsuffering
+
+
