--- a/src/content/posts/translations/translate-angry-gm-downtime-activities-rules.mdx
+++ b/src/content/posts/translations/translate-angry-gm-downtime-activities-rules.mdx
@@ -4,10 +4,10 @@ description: "Перевод статьи Злого ГМ-а с описание
 date: "2022-06-12"
 tags: 
   - "5e"
-  - "angrygm"
+  - "Angry GM"
   - "downtime"
   - "downtime-activities"
-  - "translate"
+  - "перевод"
 ---
 
 [E5E-DOWNTIME-ANGRY](https://cyborgsandmages.com/wp-content/uploads/2022/06/E5E-DOWNTIME-ANGRY.pdf)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2022/06/E5E-DOWNTIME-ANGRY.pdf)
