--- a/src/content/posts/translations/translate-how-to-play-open-world-angry-gm.mdx
+++ b/src/content/posts/translations/translate-how-to-play-open-world-angry-gm.mdx
@@ -3,7 +3,7 @@ title: "[Перевод] Как играть в открытом мире Angry 
 date: "2022-06-10"
 description: Перевод статьи Angry GM
 tags: 
-  - "Angry Gm"
+  - "Angry GM"
   - "campaign"
   - "sandbox"
   - "Открытый-мир"
