--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -56,9 +56,15 @@ links:
 
 Начиная с выхода Руководства Воло по чудовищам многие участники сообщества - Юра, Ира, Дима, Антон, Кирилл принимают активное участие в проектах переводов материалов D&D и приключений Лиги Авантюристов.
 
+### Перевод SRD 5.1
+
 Помимо этого была начата работа над бесплатным переводом SRD 5.1 на русский язык с целью предоставления сообществу полностью легальных, базовых правил пятой редакции, используя которые каждый мог бы создавать свои материалы и не зависеть от правообладателей и при этом не используя пиратский перевод, который содержит множество ошибок и неточностей.
 
+[Перевод SRD 5.1 на русский](https://cyborgsandmages.com/srd-translate)
+
 Опыт работы над переводом на русский язык был использован и при помощи в переводе SRD 5.1 на украинский язык.
+
+
 
 ## Создание домашних правил и homebrew
 
@@ -70,6 +76,6 @@ links:
 
 <Aside>
 
-Сейчас мы переводим несколько книг англоязычных авторов, продолжаем работу над [переводом SRD 5.1](https://srd.dnd-5e.org/) и готовим свои материалы, которые могут заменить D&D 5e после выхода One D&D - наш проект [Core d20 RPG](https://cyborgsandmages.com/core-d20/1)
+Сейчас мы переводим несколько книг англоязычных авторов, продолжаем работу над [переводом SRD 5.1](https://srd.dnd-5e.org/) и готовим свои материалы, которые могут заменить D&D 5e после выхода One D&D - наш проект [Core d20 RPG](https://cyborgsandmages.com/cored20rpg)
 
 </Aside>
